# api_gateway_failure_control

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260504_0001_create_traffic_events.py
app/: __init__.py
app/common/: __init__.py  circuit_breaker.py  config.py  database.py  logging.py  metrics.py  models.py  redis_client.py
app/control_api/: __init__.py  main.py  schemas.py
app/services/: __init__.py  main.py
frontend/: index.html  main.js  styles.css
infra/envoy/: envoy.yaml
infra/grafana/dashboards/: failure-control.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
scripts/: smoke-test.ps1
tests/: test_circuit_breaker.py
