[tool.poetry]
name = "api-gateway-failure-control"
version = "0.1.0"
description = "Diploma prototype: failure control and processing for routed traffic at API gateway level."
authors = ["Svidlov Dmitriy Evgenievich"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.2" }
httpx = "^0.28.1"
tenacity = "^9.1.2"
prometheus-client = "^0.21.1"
redis = "^5.2.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.40" }
asyncpg = "^0.30.0"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
alembic = "^1.15.2"
structlog = "^25.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
ruff = "^0.11.8"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
